# edusploit

./: .env  Pipfile  README.md  build.sh  manage.py  pyproject.toml  render.yaml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/core/css/: app.min.css  bootstrap.min.css  jquery.gritter.css  new_login.css  style_sourceadmin.min.css  tile_box_widgets.css  toastr.css
core/static/core/js/: app.min.js  default.js  lg.js
core/templates/core/: dashboard.html  fees-payment.html  sign-in.html
edusploit/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_user_first_name_user_last_name_user_middle_name_and_more.py
